k8s/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: bitnami/postgresql
          imagePullPolicy: IfNotPresent
          ports:
            - name: postgres
              containerPort: 5432
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: postgres
          livenessProbe:
            tcpSocket:
              port: postgres
          readinessProbe:
            tcpSocket:
              port: postgres
          resources:
            requests:
              cpu: 10m
              memory: 64M
            limits:
              cpu: 1000m
              memory: 512M
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  labels:
    app.kubernetes.io/name: adminer
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: adminer
  template:
    metadata:
      labels:
        app.kubernetes.io/name: adminer
    spec:
      automountServiceAccountToken: false
      containers:
        - name: adminer
          image: adminer:4.8.1-standalone
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 100m
              memory: 64M
            requests:
              cpu: 10m
              memory: 64M
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: rabbitmq
spec:
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: rabbitmq
          image: rabbitmq:3.9.11-management-alpine
          ports:
            - name: amqp
              containerPort: 5672
              protocol: TCP
            - name: http
              containerPort: 15672
              protocol: TCP
          livenessProbe:
            httpGet:
              port: http
              path: /
          readinessProbe:
            httpGet:
              port: http
              path: /
          resources:
            requests:
              cpu: 100m
              memory: 256M
            limits:
              cpu: 1000m
              memory: 1024M
