k8s/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adminer
spec:
  rules:
    - host: "adminer.svc.cluster.local"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: adminer
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq
spec:
  rules:
    - host: "rabbitmq.svc.cluster.local"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
